# voicecode

./: .gitignore  Cargo.toml  README.md  VoiceCode.spec  build.rs  config.py  config.sample.toml  main.py  pyproject.toml  tray_app.py
.cargo/: config.toml
docs/: architecture.md  configuration.md  crossplatform.md  packaging.md  testing.md
domain/: models.py  protocols.py
examples/: groq_check.rs  key_probe.rs
pipeline/: cleaner.py  listener.py  recorder.py  transcriber.py  writer.py
rust/: README.md
rust/src/domain/: models.rs
rust/src/pipeline/: listener.rs  recorder.rs
scripts/: build_exe.ps1  deploy.ps1  register_task.ps1  unregister_task.ps1
src/: config.rs  icon_render.rs  lib.rs  main.rs  worker.rs
src/domain/: models.rs  traits.rs
src/pipeline/: cleaner.rs  listener.rs  mod.rs  recorder.rs  writer.rs
src/pipeline/recorder/: cpal_input.rs  mod.rs
src/pipeline/transcriber/: groq.rs  local.rs  mod.rs
src/pipeline/writer/: mod.rs  sequence_buffer.rs
src/utils/: audio.rs  icon.rs  mod.rs  platform.rs
tests/: conftest.py  e2e.rs  local_gpu.rs  test_cleaner.py  test_config.py  test_pipeline_e2e.py  test_platform.py  test_recorder.py  test_transcriber.py  test_tray_app.py  test_writer_clipboard.py  test_writer_sequence.py
utils/: audio.py  platform.py
