[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voicecode"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
]
tray = [
    "pystray>=0.19",
    "pillow>=10.0",
]
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12==9.*",
]

[tool.setuptools]
py-modules = ["config", "main", "tray_app"]

[tool.setuptools.packages.find]
include = ["domain*", "pipeline*", "utils*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
